--- a/APIJava/src/main/resources/application.properties
+++ b/APIJava/src/main/resources/application.properties
@@ -2,9 +2,13 @@ spring.application.name=APIJava
 server.port= 8080
 
 # Configuracion de MySQL
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/fsanrafael
-spring.datasource.username=DB_USER
-spring.datasource.password=123456
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/fsanrafael
+spring.datasource.url=jdbc:mysql://localhost:3306/fsanrafael
+#spring.datasource.username=DB_USER
+#spring.datasource.password=123456
+
+spring.datasource.username=root
+spring.datasource.password=
 
 # Configuracion de Hibernate (JPA)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
