--- a/APIJava/src/main/resources/application.properties
+++ b/APIJava/src/main/resources/application.properties
@@ -3,7 +3,8 @@ server.port= 8080
 
 # Configuracion de MySQL
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/fsanrafael
-spring.datasource.url=jdbc:mysql://localhost:3306/fsanrafael
+#spring.datasource.url=jdbc:mysql://localhost:3306/fsanrafael
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/fsanrafael
 #spring.datasource.username=DB_USER
 #spring.datasource.password=123456
 
