--- a/APIJava/src/main/resources/application.properties
+++ b/APIJava/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/fsanrafael
 #spring.datasource.password=123456
 
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Moises123
 
 # Configuracion de Hibernate (JPA)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
