--- a/APIJava/src/main/resources/application.properties
+++ b/APIJava/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port= 8080
 #spring.datasource.url=jdbc:mysql://localhost:3306/fsanrafael
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/fsanrafael
 spring.datasource.username=root
-spring.datasource.password=Moises123
+spring.datasource.password=
 
 #spring.datasource.username=root
 #spring.datasource.password=
