--- a/APIJava/src/main/resources/application.properties
+++ b/APIJava/src/main/resources/application.properties
@@ -5,11 +5,11 @@ server.port= 8080
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/fsanrafael
 #spring.datasource.url=jdbc:mysql://localhost:3306/fsanrafael
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/fsanrafael
-#spring.datasource.username=DB_USER
-#spring.datasource.password=123456
+spring.datasource.username=DB_USER
+spring.datasource.password=123456
 
-spring.datasource.username=root
-spring.datasource.password=Moises123
+#spring.datasource.username=root
+#spring.datasource.password=Moises123
 
 # Configuracion de Hibernate (JPA)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
